--- a/how_to_run_model.ipynb
+++ b/how_to_run_model.ipynb
@@ -35,25 +35,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>b</th>\n",
-       "      <th>e</th>\n",
-       "      <th>LB</th>\n",
-       "      <th>AC</th>\n",
-       "      <th>FM</th>\n",
-       "      <th>UC</th>\n",
-       "      <th>DL</th>\n",
-       "      <th>DS</th>\n",
-       "      <th>DP</th>\n",
-       "      <th>ASTV</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Nmax</th>\n",
-       "      <th>Nzeros</th>\n",
-       "      <th>Mode</th>\n",
-       "      <th>Mean</th>\n",
-       "      <th>Median</th>\n",
-       "      <th>Variance</th>\n",
-       "      <th>Tendency</th>\n",
-       "      <th>CLASS</th>\n",
        "      <th>pred</th>\n",
        "      <th>results</th>\n",
        "    </tr>\n",
@@ -61,121 +42,26 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>240.0</td>\n",
-       "      <td>357.0</td>\n",
-       "      <td>120.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>120.0</td>\n",
-       "      <td>137.0</td>\n",
-       "      <td>121.0</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>9.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>Suspect</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>632.0</td>\n",
-       "      <td>132.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>141.0</td>\n",
-       "      <td>136.0</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>177.0</td>\n",
-       "      <td>779.0</td>\n",
-       "      <td>133.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>141.0</td>\n",
-       "      <td>135.0</td>\n",
-       "      <td>138.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>411.0</td>\n",
-       "      <td>1192.0</td>\n",
-       "      <td>134.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>137.0</td>\n",
-       "      <td>134.0</td>\n",
-       "      <td>137.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>6.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>533.0</td>\n",
-       "      <td>1147.0</td>\n",
-       "      <td>132.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>137.0</td>\n",
-       "      <td>136.0</td>\n",
-       "      <td>138.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Normal</td>\n",
        "    </tr>\n",
@@ -183,192 +69,52 @@
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2124</th>\n",
-       "      <td>1576.0</td>\n",
-       "      <td>3049.0</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>78.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>152.0</td>\n",
-       "      <td>147.0</td>\n",
-       "      <td>151.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>Suspect</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2125</th>\n",
-       "      <td>2796.0</td>\n",
-       "      <td>3415.0</td>\n",
-       "      <td>142.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>74.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>145.0</td>\n",
-       "      <td>143.0</td>\n",
-       "      <td>145.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2126</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2127</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2128</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>564.0</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>87.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Normal</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2129 rows × 26 columns</p>\n",
+       "<p>2129 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           b       e     LB   AC     FM    UC    DL   DS   DP  ASTV  ...  \\\n",
-       "0      240.0   357.0  120.0  0.0    0.0   0.0   0.0  0.0  0.0  73.0  ...   \n",
-       "1        5.0   632.0  132.0  4.0    0.0   4.0   2.0  0.0  0.0  17.0  ...   \n",
-       "2      177.0   779.0  133.0  2.0    0.0   5.0   2.0  0.0  0.0  16.0  ...   \n",
-       "3      411.0  1192.0  134.0  2.0    0.0   6.0   2.0  0.0  0.0  16.0  ...   \n",
-       "4      533.0  1147.0  132.0  4.0    0.0   5.0   0.0  0.0  0.0  16.0  ...   \n",
-       "...      ...     ...    ...  ...    ...   ...   ...  ...  ...   ...  ...   \n",
-       "2124  1576.0  3049.0  140.0  1.0    0.0   9.0   0.0  0.0  0.0  78.0  ...   \n",
-       "2125  2796.0  3415.0  142.0  1.0    1.0   5.0   0.0  0.0  0.0  74.0  ...   \n",
-       "2126     NaN     NaN    NaN  NaN    NaN   NaN   NaN  NaN  NaN   NaN  ...   \n",
-       "2127     NaN     NaN    NaN  NaN    NaN   NaN   0.0  0.0  0.0   NaN  ...   \n",
-       "2128     NaN     NaN    NaN  NaN  564.0  23.0  16.0  1.0  4.0  87.0  ...   \n",
+       "      pred  results\n",
+       "0      2.0  Suspect\n",
+       "1      1.0   Normal\n",
+       "2      1.0   Normal\n",
+       "3      1.0   Normal\n",
+       "4      1.0   Normal\n",
+       "...    ...      ...\n",
+       "2124   2.0  Suspect\n",
+       "2125   1.0   Normal\n",
+       "2126   1.0   Normal\n",
+       "2127   1.0   Normal\n",
+       "2128   1.0   Normal\n",
        "\n",
-       "      Nmax  Nzeros   Mode   Mean  Median  Variance  Tendency  CLASS  pred  \\\n",
-       "0      2.0     0.0  120.0  137.0   121.0      73.0       1.0    9.0   2.0   \n",
-       "1      6.0     1.0  141.0  136.0   140.0      12.0       0.0    6.0   1.0   \n",
-       "2      5.0     1.0  141.0  135.0   138.0      13.0       0.0    6.0   1.0   \n",
-       "3     11.0     0.0  137.0  134.0   137.0      13.0       1.0    6.0   1.0   \n",
-       "4      9.0     0.0  137.0  136.0   138.0      11.0       1.0    2.0   1.0   \n",
-       "...    ...     ...    ...    ...     ...       ...       ...    ...   ...   \n",
-       "2124   6.0     0.0  152.0  147.0   151.0       4.0       1.0    5.0   2.0   \n",
-       "2125   2.0     1.0  145.0  143.0   145.0       1.0       0.0    1.0   1.0   \n",
-       "2126   NaN     NaN    NaN    NaN     NaN       NaN       NaN    NaN   1.0   \n",
-       "2127   NaN     NaN    NaN    NaN     NaN       NaN       NaN    NaN   1.0   \n",
-       "2128   NaN     NaN    NaN    NaN     NaN       NaN       NaN    NaN   1.0   \n",
-       "\n",
-       "      results  \n",
-       "0     Suspect  \n",
-       "1      Normal  \n",
-       "2      Normal  \n",
-       "3      Normal  \n",
-       "4      Normal  \n",
-       "...       ...  \n",
-       "2124  Suspect  \n",
-       "2125   Normal  \n",
-       "2126   Normal  \n",
-       "2127   Normal  \n",
-       "2128   Normal  \n",
-       "\n",
-       "[2129 rows x 26 columns]"
+       "[2129 rows x 2 columns]"
       ]
      },
      "execution_count": 1,
@@ -430,7 +176,7 @@
     "df=labels_to_results(df,label_col='pred')\n",
     "# pred are the [1,2,3]\n",
     "#results are [Normal=1; Suspect=2; Pathologic=3]\n",
-    "df\n"
+    "df[['pred','results']]\n"
    ]
   },
   {
